# chronon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OpenAnox.sln  cmake_generate_vs2022-x64.bat  genlib.bat  hosae.sln  quake2.vcxproj  quake2.vcxproj.filters  readme.md  todo.txt  unix_install_dependencies.sh  vcpkg_setup_apple.sh  vcpkg_setup_msvc.bat
.github/workflows/: build-linux-gcc_x64.yml  build-status.yml  build-windows-gcc_x64.yml  cmake.yml
anoxaux/: AuxInterface.h  interface.h
anoxgfx/: GfxInterface.h
client/: cl_cin.c  cl_cin.cpp  cl_ents.c  cl_ents.cpp  cl_fx.c  cl_fx.cpp  cl_input.cpp  cl_inv.cpp  cl_main.c  cl_main.cpp  cl_newfx.c  cl_parse.cpp  cl_scrn.cpp  cl_tent.c  cl_tent.cpp  cl_view.cpp  client.h  console.c  console.cpp  keys.cpp  keys.h  menu.c  menu.cpp  qmenu.cpp  qmenu.h  ref.h  snd_dma.c  snd_dma.cpp  snd_mem.c  snd_mem.cpp  snd_mix.cpp  sound.h
ctf/: ctf.vcxproj  ctf.vcxproj.filters  q_shared.c  q_shared.h
engine/: CMakeLists.txt  app.cpp  app.h  hunk.cpp  input.cpp  system.cpp
engine/ape/: ape.cpp  ape.h
engine/client/: adivtab.h  asm_i386.h  block16.h  block8.h  cdaudio.h  cl_cin.cpp  cl_ents.cpp  cl_fx.cpp  cl_input.cpp  cl_inv.cpp  cl_main.cpp  cl_newfx.cpp  cl_parse.cpp  cl_pred.cpp  cl_scrn.cpp  cl_tent.cpp  cl_view.cpp  client.h  console.cpp  console.h  input.h  keys.cpp  keys.h  menu.cpp  qmenu.cpp  qmenu.h  ref.h  screen.h  snd_dma.cpp  snd_loc.h  snd_mem.cpp  snd_mix.cpp  sound.h  vid.h  vid_menu.cpp  x86.cpp
engine/client/ref_gl/: anorms.h  gl_draw.cpp  gl_image.cpp  gl_light.cpp  gl_local.h  gl_model.cpp  gl_model.h  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_shader_manager.cpp  gl_shader_manager.h  gl_warp.cpp  qgl.cpp  stb_image.h
engine/client/renderer/: light.cpp  material.cpp  material.h  model.h  renderer.h  shader_manager.cpp  shader_manager.h
engine/client/renderer/ref_gl/: anormtab.h  gl_draw.cpp  gl_image.cpp  gl_local.h  gl_model.cpp  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_shader_manager.cpp  gl_shader_manager.h  gl_warp.cpp  qgl.cpp  qgl.h  stb_image.h  stb_image_write.h  warpsin.h
engine/linux/: cd_linux.cpp  gl_fxmesa.c  gl_glx.c  glob.cpp  glob.h  glw_linux.h  net_udp.cpp  q_shlinux.cpp  qgl_linux.c  snd_linux.cpp  sys_linux.cpp  vid_menu.c  vid_so.cpp
engine/model/: model_alias.cpp  model_alias.h  model_mda.cpp  model_mda.h
engine/null/: cd_null.cpp  snd_null.cpp
engine/renderer/: light.cpp  material.cpp  material.h  model.h  renderer.h  shader_manager.cpp
engine/renderer/ref_gl/: anorms.h  gl_draw.cpp  gl_image.cpp  gl_local.h  gl_model.cpp  gl_rmain.cpp  gl_rsurf.cpp  gl_shader_manager.cpp  gl_shader_manager.h  gl_warp.cpp  qgl.cpp  qgl.h
engine/sdl2/: sdl2_sys.cpp  sdl2_vid.cpp
engine/server/: server.h  sv_ccmds.cpp  sv_ents.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_null.cpp  sv_send.cpp  sv_user.cpp  sv_world.cpp
engine/win32/: cd_win.cpp  glw_imp.cpp  in_win.cpp  net_wins.cpp  q_shwin.cpp  qgl_win.cpp  resource.h  snd_win.cpp  sys_win.cpp  vid_dll.cpp  vid_menu.cpp  winquake.h
game/: CMakeLists.txt  CinematicScript.cpp  CinematicScript.h  g_ai.cpp  g_chase.cpp  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_items.cpp  g_local.h  g_main.c  g_main.cpp  g_misc.cpp  g_monster.cpp  g_phys.cpp  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.cpp  g_target.cpp  g_trigger.cpp  g_utils.cpp  g_weapon.cpp  game.h  game.vcxproj  game.vcxproj.filters  m_actor.cpp  m_actor.h  m_berserk.c  m_flash.cpp  m_flyer.cpp  m_insane.cpp  m_insane.h  m_medic.cpp  m_medic.h  m_move.cpp  m_player.h  p_client.cpp  p_hud.cpp  p_trail.cpp  (+5 more)
game/entity/: entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  entity_player.cpp  entity_player.h  entity_player_start.cpp
lib/: anoxaux.exp  anoxaux.lib  anoxgfx.exp  anoxgfx.lib
qcommon/: cmd.cpp  cmodel.cpp  common.c  common.cpp  cvar.c  cvar.cpp  files.c  files.cpp  llist.c  llist.cpp  md4.cpp  net_chan.cpp  pmove.cpp  qcommon.h  qfiles.h
qcommon/include/qcommon/: math_vector.h
ref_gl/: CMakeLists.txt  anormtab.h  gl_draw.c  gl_draw.cpp  gl_image.c  gl_image.cpp  gl_light.c  gl_light.cpp  gl_local.h  gl_mesh.c  gl_mesh.cpp  gl_model.c  gl_model.cpp  gl_model.h  gl_rmain.c  gl_rmain.cpp  gl_rmisc.c  gl_rmisc.cpp  gl_rsurf.c  gl_rsurf.cpp  gl_warp.c  gl_warp.cpp  qgl.h  ref_gl.vcxproj  ref_gl.vcxproj.filters
server/: server.h  sv_ccmds.cpp  sv_game.cpp  sv_init.cpp  sv_main.c  sv_main.cpp  sv_send.cpp  sv_user.c  sv_world.cpp
win32/: cd_win.cpp  conproc.cpp  glw_imp.c  glw_imp.cpp  in_win.c  net_wins.c  net_wins.cpp  q_shwin.c  q_shwin.cpp  qgl_win.cpp  snd_win.c  snd_win.cpp  sys_win.c  sys_win.cpp  vid_dll.c  vid_dll.cpp  vid_menu.c  vid_menu.cpp
